--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@emotion/react": "^11.10.5",
+    "@mantine/carousel": "^5.10.0",
     "@mantine/core": "^5.10.0",
     "@mantine/dropzone": "^5.10.0",
     "@mantine/ds": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
+    "@mantine/notifications": "^5.10.0",
     "@mantine/prism": "^5.10.0",
     "@tabler/icons": "^1.119.0",
+    "embla-carousel-react": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.6.2",
     "react-transition-group": "^4.4.5",
     "react-uuid": "^2.0.0",
     "uuid": "^9.0.0"
