--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@mantine/notifications": "^5.10.0",
     "@mantine/prism": "^5.10.0",
     "@tabler/icons": "^1.119.0",
+    "copy-image-clipboard": "^2.1.2",
     "embla-carousel-react": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.6.2",
+    "react-simple-image-viewer": "^1.2.2",
     "react-transition-group": "^4.4.5",
     "react-uuid": "^2.0.0",
     "uuid": "^9.0.0"
